--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "dependencies": {
     "angular-animate": "^1.4.8",
+    "bluebird": "^3.0.6",
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
+    "gulp-env": "^0.2.0",
     "method-override": "^2.3.5",
+    "mongoose": "^4.2.9",
     "morgan": "^1.6.1",
     "serve-favicon": "^2.3.0"
   },
