--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,6 @@
     "angular-material": "~0.11.4",
     "angular-resource": "~1.4.8",
     "angular-ui-router": "~0.2.15",
-    "font-awesome": "~4.5.0",
-    "ngToast": "ngtoast#~1.5.6",
-    "angular-sanitize": "~1.4.8"
+    "font-awesome": "~4.5.0"
   }
 }
