--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "express": "^4.13.3",
     "gulp-env": "^0.2.0",
     "method-override": "^2.3.5",
+    "mongo": "^0.1.0",
     "mongoose": "^4.2.9",
     "morgan": "^1.6.1",
     "ngtoast": "^2.0.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "bower": "^1.5.3",
